--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             border: dashed;
             width: 50%;
             margin-top: 30px;
+            color: gray;
         }
 
         .social-icon {
@@ -59,14 +60,15 @@
 
         .name-header, .title-subheader, .section-heading, .section-subheading {
             color: #ff8375;
-            font-family: "Courier New", Courier, Monospace;
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
         }
         p, li {
             color: #d6d1ff;
+            font-family: Georgia, serif;
         }
         a {
             color: #29a2ff;
-            font-family: "Courier New", Courier, Monospace;
+            font-family:"Trebuchet MS", Helvetica, sans-serif;
         }
 
         .list-header-link {
