Change color palette

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Blake Eakin</title>
     <style>
         body {
-            /*background-color: #3C3331;*/
-            background-color: #343642;
+            background-color: #312013;
         }
 
         ul {
@@ -36,7 +35,7 @@
             position: absolute;
             left: 33%;
             padding: 40px;
-            background-color: #343f42;
+            background-color: #282616;
             top: 0px;
         }
         .social-menu {
@@ -59,15 +58,15 @@
         
 
         .name-header, .title-subheader, .section-heading, .section-subheading {
-            color: #ff8375;
+            color: #378366;
             font-family: "Trebuchet MS", Helvetica, sans-serif;
         }
         p, li {
-            color: #d6d1ff;
+            color: #a9cf67;
             font-family: Georgia, serif;
         }
         a {
-            color: #29a2ff;
+            color: #48ca5c;
             font-family:"Trebuchet MS", Helvetica, sans-serif;
         }
 
