Update for A+ cert

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
                 <hr />
                 <li><a id="achievements"></a><h2 class="section-heading">Achievements</h2></li>
                     <ul>
+                        <li><h3 class="section-subheading">Certifications</h3></li>
+                        <ul class="plaintext-list">
+                            <li>CompTIA A+</li>
+                        </ul>
                         <li><h3 class="section-subheading">National Cyber League</h3></li>
                         <ul>
                             <li>Fall 2020</li>
